--- a/index.html
+++ b/index.html
@@ -15,18 +15,18 @@
         <th>2017 estimate</th>
       </tr>
       <tr>
-        <td>New york</td>
-        <td>New york</td>
+        <td>New York</td>
+        <td>New York</td>
         <td>8,622,698</td>
       </tr>
       <tr>
         <td>Los Angelas</td>
-        <td>Carlifonia</td>
+        <td>California</td>
         <td>3,999,759</td>
       </tr>
       <tr>
         <td>Chicago</td>
-        <td>illinois</td>
+        <td>Illinois</td>
         <td>2,716,450</td>
       </tr>
       <tr>
